add blog section and link to individual blog posts

--- a/index.html
+++ b/index.html
@@ -61,122 +61,157 @@
       <section class="carousel" id="carousel-area">
         <div class="reel">
           <article>
-            <a href="#" class="image featured"
+            <a
+              href="https://medium.com/@harry.wilson1995a/javascript-rails-project-using-classes-to-create-highly-organized-code-3b7b66d462f4"
+              target="_blank"
+              class="image featured"
               ><img src="images/pic01.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Pulvinar sagittis congue</a></h3>
+              <h3>
+                <a
+                  href="https://medium.com/@harry.wilson1995a/javascript-rails-project-using-classes-to-create-highly-organized-code-3b7b66d462f4"
+                  target="_blank"
+                  >Using OOP To Create Highly Organized Code</a
+                >
+              </h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              This blog post covers how I used Object Oriented Programming in my
+              Full-Stack JavaScript Single Page Application with a Rails
+              backend. I chose to build a complex card game in which players
+              compete to place all their sets first. Using Classes I was able to
+              create highly organized code, making a complex idea into a
+              comparatively easy build.
             </p>
           </article>
 
           <article>
-            <a href="#" class="image featured"
+            <a
+              href="https://medium.com/@harry.wilson1995a/my-approach-to-learning-new-languages-frameworks-25f64b8a862d"
+              target="_blank"
+              class="image featured"
               ><img src="images/pic02.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Fermentum sagittis proin</a></h3>
+              <h3>
+                <a
+                  href="https://medium.com/@harry.wilson1995a/my-approach-to-learning-new-languages-frameworks-25f64b8a862d"
+                  target="_blank"
+                  >My Approach to Learning New Languages/Frameworks</a
+                >
+              </h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              In this blog post I discuss my plans to learn the MERN stack now
+              that I have become a solid Full-Stack Ruby Developer. I talk about
+              how I am approaching Node.js and the MERN stack. Approaching
+              additional languages/frameworks is far easier now that I know the
+              concepts of Frontend/Backend development solidly in one language.
             </p>
           </article>
 
           <article>
-            <a href="#" class="image featured"
+            <a
+              href="https://medium.com/@harry.wilson1995a/ruby-on-rails-project-using-scope-methods-to-narrow-my-database-queries-may-2020-a874e6019312"
+              class="image featured"
+              target="_blank"
               ><img src="images/pic03.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Sed quis rhoncus placerat</a></h3>
+              <h3>
+                <a
+                  href="https://medium.com/@harry.wilson1995a/ruby-on-rails-project-using-scope-methods-to-narrow-my-database-queries-may-2020-a874e6019312"
+                  target="_blank"
+                  >Using Scope Methods to Narrow Database Queries</a
+                >
+              </h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              In this blog post I discuss how I defined scope methods in my Ruby
+              model files and used them in order to make more technically
+              difficult database queries which led to an improved user
+              experience. The post goes into detail about the differences
+              between Rails and SQL queries and shows how I used table joins
+              within my scope methods to arrange courses by number of reviews.
             </p>
           </article>
 
           <article>
-            <a href="#" class="image featured"
+            <a
+              href="https://medium.com/@harry.wilson1995a/my-sinatra-project-pushing-for-stretch-goals-while-combining-frameworks-march-2020-c6be96b8a695"
+              target="_blank"
+              class="image featured"
               ><img src="images/pic04.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Ultrices urna sit lobortis</a></h3>
+              <h3>
+                <a
+                  href="https://medium.com/@harry.wilson1995a/my-sinatra-project-pushing-for-stretch-goals-while-combining-frameworks-march-2020-c6be96b8a695"
+                  target="_blank"
+                  >Pushing Yourself in Full-Stack Development</a
+                >
+              </h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              This blog post discusses my first Full-Stack application which was
+              coded using Sinatra. It goes into detail about how I pushed myself
+              much further than the project requirements and the process of
+              researching and using additional gems and frameworks in order to
+              create efficient and clean code that implemented advanced features
+              into my application.
             </p>
           </article>
 
           <article>
-            <a href="#" class="image featured"
+            <a
+              href="https://medium.com/@harry.wilson1995a/my-ruby-cli-application-learning-to-work-with-apis-and-metaprogamming-96a1dc963223"
+              target="_blank"
+              class="image featured"
               ><img src="images/pic05.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Varius magnis sollicitudin</a></h3>
+              <h3>
+                <a
+                  href="https://medium.com/@harry.wilson1995a/my-ruby-cli-application-learning-to-work-with-apis-and-metaprogamming-96a1dc963223"
+                  target="_blank"
+                  >Third Party APIs and Metaprogramming</a
+                >
+              </h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              In this blog post I discuss how to work with Third Party APIs and
+              my use of the fantasy NBA API in my CLI Project. I also discuss
+              Metaprogramming. Code that writes code is an extremely efficient
+              way of programming and I use it in conjunction with my API data in
+              order to seemlessly create my database of NBA players and create
+              an application which solves a real-world issue.
             </p>
           </article>
 
           <article>
-            <a href="#" class="image featured"
+            <a
+              href="https://medium.com/@harry.wilson1995a/why-did-you-decide-to-learn-software-engineering-de-cbdc878f5885"
+              target="_blank"
+              class="image featured"
               ><img src="images/pic01.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Pulvinar sagittis congue</a></h3>
+              <h3>
+                <a
+                  href="https://medium.com/@harry.wilson1995a/why-did-you-decide-to-learn-software-engineering-de-cbdc878f5885"
+                  target="_blank"
+                  >"Why did you decide to learn Software Engineering?"</a
+                >
+              </h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
-            </p>
-          </article>
-
-          <article>
-            <a href="#" class="image featured"
-              ><img src="images/pic02.jpg" alt=""
-            /></a>
-            <header>
-              <h3><a href="#">Fermentum sagittis proin</a></h3>
-            </header>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
-            </p>
-          </article>
-
-          <article>
-            <a href="#" class="image featured"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
-            <header>
-              <h3><a href="#">Sed quis rhoncus placerat</a></h3>
-            </header>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
-            </p>
-          </article>
-
-          <article>
-            <a href="#" class="image featured"
-              ><img src="images/pic04.jpg" alt=""
-            /></a>
-            <header>
-              <h3><a href="#">Ultrices urna sit lobortis</a></h3>
-            </header>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
-            </p>
-          </article>
-
-          <article>
-            <a href="#" class="image featured"
-              ><img src="images/pic05.jpg" alt=""
-            /></a>
-            <header>
-              <h3><a href="#">Varius magnis sollicitudin</a></h3>
-            </header>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              In my first blog post I discuss how I took a career break and
+              after trying out multiple career based courses on Udemy,
+              ultimately decided to pursue a career in Software Engineering. I
+              discuss the similarities between linguistics (my major in college)
+              and coding and talk about what the future holds for me now that I
+              have been accepted into the Flatiron Bootcamp.
             </p>
           </article>
         </div>
