add personal bio with skills and tech stack to About Me section

--- a/index.html
+++ b/index.html
@@ -50,9 +50,17 @@
       <!-- Banner -->
       <section id="banner">
         <header>
-          <h2>Harry Wilson - Full-Stack JavaScript and Ruby Developer.</h2>
+          <h2>Harry Wilson - Full-Stack Developer</h2>
           <p>
-            A description about myself.
+            A Full-Stack Developer with 6 months experience working in the
+            industry. I am a highly competent JavaScript and Ruby developer with
+            some experience working with Python and PHP. I have developed
+            projects using React, the MERN stack, Ruby on Rails, Sinatra as well
+            as several application using only vanilla JavaScript. Equally
+            competent in Frontend and Backend development. Other technologies I
+            have used include SQL, Bootstrap, Foundation, Git/Github. I am also
+            well versed in Agile Methodology, Test Driven Development, Object
+            Oriented Programming and have knowledge of TypeScript.
           </p>
         </header>
       </section>
