--- a/index.html
+++ b/index.html
@@ -232,29 +232,16 @@
             ><img src="images/pic06.jpg" alt=""
           /></a>
           <header>
-            <h2><a href="#">Sed massa imperdiet magnis</a></h2>
+            <h2><a href="#">Professional Experience</a></h2>
             <p>
-              Sociis aenean eu aenean mollis mollis facilisis primis ornare
-              penatibus aenean. Cursus ac enim pulvinar curabitur morbi
-              convallis. Lectus malesuada sed fermentum dolore amet.
+              Dates and Title
             </p>
           </header>
           <p>
-            Commodo id natoque malesuada sollicitudin elit suscipit. Curae
-            suspendisse mauris posuere accumsan massa posuere lacus convallis
-            tellus interdum. Amet nullam fringilla nibh nulla convallis ut
-            venenatis purus sit arcu sociis. Nunc fermentum adipiscing tempor
-            cursus nascetur adipiscing adipiscing. Primis aliquam mus lacinia
-            lobortis phasellus suscipit. Fermentum lobortis non tristique ante
-            proin sociis accumsan lobortis. Auctor etiam porttitor phasellus
-            tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat
-            integer interdum integer purus sapien. Nibh eleifend nulla nascetur
-            pharetra commodo mi augue interdum tellus. Ornare cursus augue
-            feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-            natoque aenean scelerisque.
+            explanation of duties
           </p>
           <footer>
-            <a href="#" class="button">Continue Reading</a>
+            <a href="#" class="button">Link to online resume?</a>
           </footer>
         </article>
       </div>
@@ -263,10 +250,12 @@
       <div class="wrapper style1">
         <section id="features" class="container special">
           <header>
-            <h2>Morbi ullamcorper et varius leo lacus</h2>
+            <h2>Portfolio Projects</h2>
             <p>
-              Ipsum volutpat consectetur orci metus consequat imperdiet duis
-              integer semper magna.
+              Click the images or titles to see the hosted project online. You
+              can also click the link at the end of the project description to
+              see the Github page which includes a detailed description of the
+              application and the technologies used to create it.
             </p>
           </header>
           <div class="row">
@@ -275,13 +264,12 @@
                 ><img src="images/pic07.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Gravida aliquam penatibus</a></h3>
+                <h3>
+                  <a href="#">Full Stack Card Game (JavaScript and Rails)</a>
+                </h3>
               </header>
               <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
+                Explain
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
@@ -289,7 +277,7 @@
                 ><img src="images/pic08.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Sed quis rhoncus placerat</a></h3>
+                <h3><a href="#">LingoRater</a></h3>
               </header>
               <p>
                 Amet nullam fringilla nibh nulla convallis tique ante proin
@@ -303,7 +291,7 @@
                 ><img src="images/pic09.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Magna laoreet et aliquam</a></h3>
+                <h3><a href="#">Workout Swap</a></h3>
               </header>
               <p>
                 Amet nullam fringilla nibh nulla convallis tique ante proin
