add info to about me section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             well versed in Agile Methodology, Test Driven Development, Object
             Oriented Programming and have knowledge of TypeScript.
           </p>
+          <p>Flatiron Software Engineering Bootcamp Graduate</p>
         </header>
       </section>
 
