add some images to files for later use

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               href="https://medium.com/@harry.wilson1995a/javascript-rails-project-using-classes-to-create-highly-organized-code-3b7b66d462f4"
               target="_blank"
               class="image featured"
-              ><img src="images/pic01.jpg" alt=""
+              ><img src="./images/computer.jpg" alt="Computer with code"
             /></a>
             <header>
               <h3>
@@ -160,7 +160,7 @@
               href="https://medium.com/@harry.wilson1995a/my-approach-to-learning-new-languages-frameworks-25f64b8a862d"
               target="_blank"
               class="image featured"
-              ><img src="images/pic02.jpg" alt=""
+              ><img src="./images/code1.jpg" alt="Code"
             /></a>
             <header>
               <h3>
@@ -185,7 +185,7 @@
               href="https://medium.com/@harry.wilson1995a/ruby-on-rails-project-using-scope-methods-to-narrow-my-database-queries-may-2020-a874e6019312"
               class="image featured"
               target="_blank"
-              ><img src="images/pic03.jpg" alt=""
+              ><img src="./images/code2.jpg" alt="Code"
             /></a>
             <header>
               <h3>
@@ -211,7 +211,7 @@
               href="https://medium.com/@harry.wilson1995a/my-sinatra-project-pushing-for-stretch-goals-while-combining-frameworks-march-2020-c6be96b8a695"
               target="_blank"
               class="image featured"
-              ><img src="images/pic04.jpg" alt=""
+              ><img src="./images/code3.jpg" alt="Code"
             /></a>
             <header>
               <h3>
@@ -237,7 +237,7 @@
               href="https://medium.com/@harry.wilson1995a/my-ruby-cli-application-learning-to-work-with-apis-and-metaprogamming-96a1dc963223"
               target="_blank"
               class="image featured"
-              ><img src="images/pic05.jpg" alt=""
+              ><img src="./images//ruby.jpg" alt="Ruby"
             /></a>
             <header>
               <h3>
@@ -263,7 +263,7 @@
               href="https://medium.com/@harry.wilson1995a/why-did-you-decide-to-learn-software-engineering-de-cbdc878f5885"
               target="_blank"
               class="image featured"
-              ><img src="images/pic01.jpg" alt=""
+              ><img src="./images/code4.jpg" alt="Code"
             /></a>
             <header>
               <h3>
@@ -290,7 +290,11 @@
       <div class="wrapper style2">
         <article id="main" class="container special">
           <a href="#" class="image featured"
-            ><img src="images/pic06.jpg" alt=""
+            ><img
+              src="./images/work-experience.jpg"
+              width="500"
+              height="500"
+              alt="Office environment"
           /></a>
           <header>
             <h2><a href="#">Professional Experience</a></h2>
