add new blog posts and make section fully responsive

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
             <li><a href="#features" class="scrolly">Projects</a></li>
             <li><a href="#carousel-area" class="scrolly">Technical Blog</a></li>
-            <li><a href="#main" class="scrolly">Experience</a></li>
+            <li><a href="#resumeBtn" class="scrolly">Experience</a></li>
 
             <li><a href="#contact-area" class="scrolly">Contact Details</a></li>
           </ul>
@@ -63,7 +63,7 @@
             well versed in Agile Methodology, Test Driven Development, Object
             Oriented Programming and have knowledge of TypeScript.
           </p>
-          <p>Flatiron Software Engineering Bootcamp Graduate</p>
+          <p>Flatiron Software Engineering Bootcamp Graduate 2020</p>
         </header>
       </section>
       <hr />
@@ -131,6 +131,27 @@
         <div class="reel">
           <article>
             <a
+              href="https://medium.com/@harry.wilson1995a/setting-up-a-basic-server-mern-stack-part-1-d791b850a16"
+              target="_blank"
+              class="image featured"
+              ><img src="./images/rsz_1rsz_server.jpg" alt="Computer with code"
+            /></a>
+            <header>
+              <h3>
+                <a
+                  href="https://medium.com/@harry.wilson1995a/setting-up-a-basic-server-mern-stack-part-1-d791b850a16"
+                  target="_blank"
+                  >Setting up a Basic Server with Node.js and Express.js</a
+                >
+              </h3>
+            </header>
+            <p>
+              The first post in my MERN stack series which will cover the basics
+              of creating a full stack MERN application.
+            </p>
+          </article>
+          <article>
+            <a
               href="https://medium.com/@harry.wilson1995a/javascript-rails-project-using-classes-to-create-highly-organized-code-3b7b66d462f4"
               target="_blank"
               class="image featured"
@@ -146,12 +167,29 @@
               </h3>
             </header>
             <p>
-              This blog post covers how I used Object Oriented Programming in my
-              Full-Stack JavaScript Single Page Application with a Rails
-              backend. I chose to build a complex card game in which players
-              compete to place all their sets first. Using Classes I was able to
-              create highly organized code, making a complex idea into a
-              comparatively easy build.
+              A detailed overview of how I used ES6 classes in my full stack
+              JavaScript Rails project to create highly organized code.
+            </p>
+          </article>
+          <article>
+            <a
+              href="https://medium.com/@harry.wilson1995a/css-grid-a-comprehensive-overview-64c7b60bb0d6"
+              target="_blank"
+              class="image featured"
+              ><img src="./images/grid.jpg" alt="Computer with code"
+            /></a>
+            <header>
+              <h3>
+                <a
+                  href="https://medium.com/@harry.wilson1995a/css-grid-a-comprehensive-overview-64c7b60bb0d6"
+                  target="_blank"
+                  >CSS Grid - A Comprehensive Overview</a
+                >
+              </h3>
+            </header>
+            <p>
+              A comprehensive overview of one of the most powerful tools in CSS,
+              perfect for learning positioning.
             </p>
           </article>
 
@@ -172,11 +210,8 @@
               </h3>
             </header>
             <p>
-              In this blog post I discuss my plans to learn the MERN stack now
-              that I have become a solid Full-Stack Ruby Developer. I talk about
-              how I am approaching Node.js and the MERN stack. Approaching
-              additional languages/frameworks is far easier now that I know the
-              concepts of Frontend/Backend development solidly in one language.
+              An insightful account as to how I approach new
+              languages/frameworks as a full stack developer.
             </p>
           </article>
 
@@ -185,7 +220,7 @@
               href="https://medium.com/@harry.wilson1995a/ruby-on-rails-project-using-scope-methods-to-narrow-my-database-queries-may-2020-a874e6019312"
               class="image featured"
               target="_blank"
-              ><img src="./images/code2.jpg" alt="Code"
+              ><img src="./images/rsz_code2.jpg" alt="Code"
             /></a>
             <header>
               <h3>
@@ -197,12 +232,8 @@
               </h3>
             </header>
             <p>
-              In this blog post I discuss how I defined scope methods in my Ruby
-              model files and used them in order to make more technically
-              difficult database queries which led to an improved user
-              experience. The post goes into detail about the differences
-              between Rails and SQL queries and shows how I used table joins
-              within my scope methods to arrange courses by number of reviews.
+              Discussing Rails scope methods and how they are used to make
+              complex SQL database queries.
             </p>
           </article>
 
@@ -211,7 +242,7 @@
               href="https://medium.com/@harry.wilson1995a/my-sinatra-project-pushing-for-stretch-goals-while-combining-frameworks-march-2020-c6be96b8a695"
               target="_blank"
               class="image featured"
-              ><img src="./images/code3.jpg" alt="Code"
+              ><img src="./images/rsz_code3.jpg" alt="Code"
             /></a>
             <header>
               <h3>
@@ -223,12 +254,8 @@
               </h3>
             </header>
             <p>
-              This blog post discusses my first Full-Stack application which was
-              coded using Sinatra. It goes into detail about how I pushed myself
-              much further than the project requirements and the process of
-              researching and using additional gems and frameworks in order to
-              create efficient and clean code that implemented advanced features
-              into my application.
+              On always pushing yourself to learn and do more in order to
+              further your career as a full stack developer.
             </p>
           </article>
 
@@ -249,12 +276,8 @@
               </h3>
             </header>
             <p>
-              In this blog post I discuss how to work with Third Party APIs and
-              my use of the fantasy NBA API in my CLI Project. I also discuss
-              Metaprogramming. Code that writes code is an extremely efficient
-              way of programming and I use it in conjunction with my API data in
-              order to seemlessly create my database of NBA players and create
-              an application which solves a real-world issue.
+              Implementing third party APIs in my Ruby CLI application in order
+              to create a large database for users to query.
             </p>
           </article>
 
@@ -263,7 +286,7 @@
               href="https://medium.com/@harry.wilson1995a/why-did-you-decide-to-learn-software-engineering-de-cbdc878f5885"
               target="_blank"
               class="image featured"
-              ><img src="./images/code4.jpg" alt="Code"
+              ><img src="./images/rsz_code4.jpg" alt="Code"
             /></a>
             <header>
               <h3>
@@ -275,41 +298,12 @@
               </h3>
             </header>
             <p>
-              In my first blog post I discuss how I took a career break and
-              after trying out multiple career based courses on Udemy,
-              ultimately decided to pursue a career in Software Engineering. I
-              discuss the similarities between linguistics (my major in college)
-              and coding and talk about what the future holds for me now that I
-              have been accepted into the Flatiron Bootcamp.
+              My decision for a career change at age 24 and how my Masters led
+              me to Software Engineering.
             </p>
           </article>
         </div>
       </section>
-
-      <!-- Main -->
-      <div class="wrapper style2">
-        <article id="main" class="container special">
-          <a href="#" class="image featured"
-            ><img
-              src="./images/work-experience.jpg"
-              width="500"
-              height="500"
-              alt="Office environment"
-          /></a>
-          <header>
-            <h2><a href="#">Professional Experience</a></h2>
-            <p>
-              Dates and Title
-            </p>
-          </header>
-          <p>
-            explanation of duties
-          </p>
-          <footer>
-            <a href="#" class="button">Link to online resume?</a>
-          </footer>
-        </article>
-      </div>
 
       <!-- Footer -->
       <div id="footer">
@@ -327,6 +321,11 @@
                   opportunities, you can email me at
                   <a id="email-link" href="mailto:harry.wilson1995a@gmail.com"
                     >harry.wilson1995a@gmail.com</a
+                  >
+                  <br />
+                  <br />
+                  <a href="#" id="resumeBtn" class="button"
+                    >Link to online resume?</a
                   >
                 </p>
                 <ul class="icons">
