add button which links to resume on google docs

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
   <head>
     <title>Harry Wilson | Full-Stack Portfolio</title>
@@ -64,6 +59,14 @@
             Oriented Programming and have knowledge of TypeScript.
           </p>
           <p>Flatiron Software Engineering Bootcamp Graduate 2020</p>
+          <br />
+          <a
+            href="https://docs.google.com/document/d/1mUgdZ7meuXw9iV4zSNI_CKuvo2Rbj1w4sIlm1vMWR5E/edit?usp=sharing"
+            target="_blank"
+            id="resumeBtn"
+            class="button"
+            >View My Resume</a
+          >
         </header>
       </section>
       <hr />
@@ -324,8 +327,12 @@
                   >
                   <br />
                   <br />
-                  <a href="#" id="resumeBtn" class="button"
-                    >Link to online resume?</a
+                  <a
+                    href="https://docs.google.com/document/d/1mUgdZ7meuXw9iV4zSNI_CKuvo2Rbj1w4sIlm1vMWR5E/edit?usp=sharing"
+                    target="_blank"
+                    id="resumeBtn"
+                    class="button"
+                    >View My Resume</a
                   >
                 </p>
                 <ul class="icons">
