fix small margin issues on carousel section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
             well versed in Agile Methodology, Test Driven Development, Object
             Oriented Programming and have knowledge of TypeScript.
           </p>
-          <p>Flatiron Software Engineering Bootcamp Graduate 2020</p>
+          <p>
+            Flatiron School Full Stack Web Development, Ruby on Rails,
+            JavaScript and React program Graduate 2020
+          </p>
+
           <br />
           <a
             href="https://docs.google.com/document/d/1mUgdZ7meuXw9iV4zSNI_CKuvo2Rbj1w4sIlm1vMWR5E/edit?usp=sharing"
