add new pages for project showcasing and link to these pages from portfolio section

--- a/index.html
+++ b/index.html
@@ -81,52 +81,54 @@
           <header>
             <h2>Portfolio Projects</h2>
             <p>
-              Click the images or titles to see the hosted project online. You
-              can also click the link at the end of the project description to
-              see the Github page which includes a detailed description of the
-              application and the technologies used to create it.
+              Click the images or titles to read more about each project, see a
+              video demo, check out the Github repository or view the hosted
+              project online.
             </p>
           </header>
           <div class="row">
             <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic07.jpg" alt=""
-              /></a>
+              <header>
+                <h3><a href="#">Final Project Here</a></h3>
+                <br />
+                <a href="#" class="image featured"
+                  ><img src="images/lingorater.PNG" alt=""
+                /></a>
+              </header>
+              <p>
+                Description of final project here
+              </p>
+            </article>
+            <article class="col-4 col-12-mobile special">
               <header>
                 <h3>
-                  <a href="#">Full Stack Card Game (JavaScript and Rails)</a>
+                  <a href="./sequence-lite.html">Sequence Lite</a>
                 </h3>
+                <br />
+                <a href="./sequence-lite.html" class="image featured"
+                  ><img src="images/sequence.PNG" alt=""
+                /></a>
               </header>
               <p>
-                Explain
+                A full stack single page application. JavaScript frontend
+                designed using Object Oriented Programming and ES6 classes and
+                Rails backend. Multiplayer game with drag and touch events,
+                polymorphic associations and score tracker.
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic08.jpg" alt=""
-              /></a>
               <header>
-                <h3><a href="#">LingoRater</a></h3>
+                <h3><a href="./lingorater.html">LingoRater</a></h3>
+                <br />
+                <a href="./lingorater.html" class="image featured"
+                  ><img src="images/lingorater.PNG" alt=""
+                /></a>
               </header>
               <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic09.jpg" alt=""
-              /></a>
-              <header>
-                <h3><a href="#">Workout Swap</a></h3>
-              </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
+                A full stack Ruby on Rails application designed with MVC
+                architecture. Review app with full CRUD functionality,
+                authorization and authentication, Facebook OAuth, search bars,
+                scope methods, nested routes and complex validations.
               </p>
             </article>
           </div>
