--- a/lingorater.html
+++ b/lingorater.html
@@ -60,14 +60,22 @@
         <div class="container">
           <article id="main" class="special">
             <header>
-              <h2><a href="#">No Sidebar</a></h2>
+              <h2>Full Stack Ruby on Rails Review App - LingoRater</h2>
               <p>
-                Morbi convallis lectus malesuada sed fermentum dolore amet
+                Check out this short Youtube video below which demonstrates how
+                the application works.
               </p>
             </header>
-            <a href="#" class="image featured"
-              ><img src="images/pic06.jpg" alt=""
-            /></a>
+            <div id="video-container">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/OVSiBobBu4w"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit. Curae
               suspendisse mauris posuere accumsan massa posuere lacus convallis
