add links to portfolio showcase pages for github repos and hosted sites

--- a/lingorater.html
+++ b/lingorater.html
@@ -76,6 +76,22 @@
                 allowfullscreen
               ></iframe>
             </div>
+            <ul id="link-container">
+              <li>
+                Github Repo:
+                <a
+                  href="https://github.com/HarryWilson1995/Review-App"
+                  target="_blank"
+                  >Here</a
+                >
+              </li>
+              <li>
+                Hosted Site
+                <a href="https://review-appz.herokuapp.com/" target="_blank"
+                  >Here</a
+                >
+              </li>
+            </ul>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit. Curae
               suspendisse mauris posuere accumsan massa posuere lacus convallis
