add descriptions and tech stack info and future plan info to two portfolio showcase pages

--- a/lingorater.html
+++ b/lingorater.html
@@ -93,99 +93,59 @@
               </li>
             </ul>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit. Curae
-              suspendisse mauris posuere accumsan massa posuere lacus convallis
-              tellus interdum. Amet nullam fringilla nibh nulla convallis ut
-              venenatis purus lobortis. Auctor etiam porttitor phasellus tempus
-              cubilia ultrices tempor sagittis. Nisl fermentum consequat integer
-              interdum integer purus sapien. Nibh eleifend nulla nascetur
-              pharetra commodo mi augue interdum tellus. Ornare cursus augue
-              feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-              natoque aenean scelerisque vel lacinia mollis quam sodales congue.
+              This application provides a platform on which users can write
+              language course reviews and browse reviews written by other users.
+              A user can only edit and delete a review if it has been written by
+              himself/herself. Users can see lists of all authors/publishers,
+              languages and course titles which have been created. In addition
+              to this a user can search for a specific course, author/publisher
+              or language in order to speed up their search. Users can then view
+              a specific course and all its reviews, as well as add their own.
+            </p>
+            <p>
+              A user can fill out the main course review form to add a review
+              for a course which does not yet exist on the site. A user can only
+              edit/delete their reviews. They cannot edit/delete a course as I
+              wish for courses to remain on the site so that other users can
+              benefit from any additional reviews which have been written. This
+              way the site will be populated with a large number of reviews.
+              Similarly, users cannot delete/edit languages or
+              authors/publishers.
+            </p>
+            <p>
+              Once a user has completed the above steps, they can signup/login
+              to the site either with Facebook or by using the signup/login form
+              on the homepage. A user will then see a page with
+              instructions/rules for the site. See above explanation for all
+              features of site.
             </p>
             <section>
               <header>
-                <h3>Ultrices tempor sagittis nisl</h3>
+                <h3>Technology Used:</h3>
               </header>
               <p>
-                Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus
-                ultrices porttitor sollicitudin imperdiet at pretium tellus in
-                euismod a integer sodales neque. Nibh quis dui quis mattis eget
-                imperdiet venenatis feugiat. Neque primis ligula cum erat aenean
-                tristique luctus risus ipsum praesent iaculis. Fermentum elit
-                fringilla consequat dis arcu. Pellentesque mus tempor vitae
-                pretium sodales porttitor lacus. Phasellus egestas odio nisl
-                duis sociis purus faucibus morbi. Eget massa mus etiam sociis
-                pharetra magna.
+                <strong>Frontend -</strong> Ruby, ERB (embedded Ruby), HTML,
+                CSS, JavaScript, organized view files, Ruby on Rails.
               </p>
               <p>
-                Eleifend auctor turpis magnis sed porta nisl pretium. Aenean
-                suspendisse nulla eget sed etiam parturient orci cursus nibh.
-                Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim
-                cras rutrum consectetur ut penatibus fermentum nibh erat
-                malesuada varius.
+                <strong>Backend -</strong> Ruby on Rails, ActiveRecord, SQLite
+                (development), Postgresql (in production), SQL,
+                ApplicationRecord, Ruby, Facebook OAuth, scope methods, complex
+                model validations, multiple Ruby gems.
               </p>
             </section>
             <section>
               <header>
-                <h3>Augue euismod feugiat tempus</h3>
+                <h3>Future Plans:</h3>
               </header>
               <p>
-                Pretium tellus in euismod a integer sodales neque. Nibh quis dui
-                quis mattis eget imperdiet venenatis feugiat. Neque primis
-                ligula cum erat aenean tristique luctus risus ipsum praesent
-                iaculis. Fermentum elit ut nunc urna volutpat donec cubilia
-                commodo risus morbi. Lobortis vestibulum velit malesuada ante
-                egestas odio nisl duis sociis purus faucibus morbi. Eget massa
-                mus etiam sociis pharetra magna.
+                Overall this application is fairly complete. I would like to add
+                more OAuth options, perhaps with Github or Google. I may also
+                rebuild the site using the MERN Stack for practice and add
+                notifications using Service Workers in React.
               </p>
             </section>
           </article>
-          <hr />
-          <div class="row">
-            <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic07.jpg" alt=""
-              /></a>
-              <header>
-                <h3><a href="#">Gravida aliquam penatibus</a></h3>
-              </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic08.jpg" alt=""
-              /></a>
-              <header>
-                <h3><a href="#">Sed quis rhoncus placerat</a></h3>
-              </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic09.jpg" alt=""
-              /></a>
-              <header>
-                <h3><a href="#">Magna laoreet et aliquam</a></h3>
-              </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
-              </p>
-            </article>
-          </div>
         </div>
       </div>
 
