spelling changes on homepage

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 /></a>
               </header>
               <p>
-                A full stack single page application. JavaScript frontend
+                A Full Stack Single Page Application. JavaScript frontend
                 designed using Object Oriented Programming and ES6 classes and
                 Rails backend. Multiplayer game with drag and touch events,
                 polymorphic associations and score tracker.
